maxi2ntuples/out
Reading cached build data
>> Local Products Rules ..... started
>> Local Products Rules ..... done
****WARNING: Invalid tool m2n/maxi2ntuples. Please fix src/m2n/maxi2ntuples/plugins/BuildFile.xml file.
>> Entering Package m2n/maxi2ntuples
>> Creating project symlinks
  src/m2n/maxi2ntuples/python -> python/m2n/maxi2ntuples
>> Compiling edm plugin /afs/cern.ch/work/m/molszews/CMSSW/tautau/M2N_For_Italians/src/m2n/maxi2ntuples/plugins/PairBaselineSelection.cc 
/afs/cern.ch/work/m/molszews/CMSSW/tautau/M2N_For_Italians/src/m2n/maxi2ntuples/plugins/PairBaselineSelection.cc: In member function 'virtual void PairBaselineSelection::produce(edm::Event&, const edm::EventSetup&)':
/afs/cern.ch/work/m/molszews/CMSSW/tautau/M2N_For_Italians/src/m2n/maxi2ntuples/plugins/PairBaselineSelection.cc:189:17: error: 'mu_' was not declared in this scope
                 mu_  = dynamic_cast<const pat::Muon*>(l2);
                 ^
/afs/cern.ch/work/m/molszews/CMSSW/tautau/M2N_For_Italians/src/m2n/maxi2ntuples/plugins/PairBaselineSelection.cc:215:17: error: 'el_' was not declared in this scope
                 el_ = dynamic_cast<const pat::Electron*>(l2);
                 ^
gmake: *** [tmp/slc6_amd64_gcc481/src/m2n/maxi2ntuples/plugins/m2nmaxi2ntuplesAuto/PairBaselineSelection.o] Error 1
gmake: *** [There are compilation/build errors. Please see the detail log above.] Error 2
